[tool.poetry]
name = "ehr-topic-model"
version = "0.1.0"
description = ""
authors = ["Michael (Minghao) Li <minghao.li-external@sema4genomics.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "*"
numpy = "*"
optuna = "*"
pandas = "*"
pyyaml = "*"
scipy = "*"
sklearn = "*"
spacy = "*"
tmtoolkit = "*"

[tool.poetry.dev-dependencies]
ipykernel = "*"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
